--- a/app/sass/pages/_home.scss
+++ b/app/sass/pages/_home.scss
@@ -2,61 +2,111 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: right center;
-	padding-bottom: 100px;
+	padding-bottom: 20px;
+	position: relative;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba($color-grey-900, .7);
+		z-index: 0;
+	}
+}
+
+.home-fold__menu {
+	float: right;
+	margin-top: 20px;
+	position: relative;
+	z-index: 2;
+
+	svg {
+		fill: #fff;
+		height: 20px;
+		width: 20px;
+	}
+}
+
+.nav {
+	display: none;
 }
 
 .home-fold__logo {
-	padding: 20px;
-	border-radius: 0 0 4px 4px;
-	margin-bottom: 30px;
-	width: 210px;
-	background-color: #ffed6f;
 	position: relative;
-	text-align: left;
+	float: left;
+	padding: 20px 0;
+	z-index: 1;
 
 	svg {
-		width: 160px;
+		width: 180px;
 		fill: $color-grey-900;
 	}
 }
 
 .home-fold__content {
+	@include clearfix;
 	color: #fff;
 	margin-bottom: 20px;
+	position: relative;
+	z-index: 1;
 
 	a {
-		display: block;
 		margin-bottom: 14px;
 	}
 }
 
 .home-fold__title {
-	font-size: 40px;
+	font-size: 42px;
 	font-weight: 900;
-	margin-bottom: 4px;
+	margin-bottom: 10px;
 	text-shadow: 0 2px 2px rgba(#000, .4);
+
 }
 
 .home-fold__tag {
-	font-size: 20px;
-	font-weight: 500;
-	line-height: 1.3em;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.2em;
 	text-shadow: 0 2px 2px rgba(#000, .4);
 	margin-bottom: 20px;
 }
 
 @media (min-width: $screen-sm-min) {
 	.home-fold {
-		padding-bottom: 180px;
+		padding-bottom: 40px;
+	}
+
+	.nav {
+		float: right;
+		list-style: none;
+		position: relative;
+		z-index: 1;
+		padding: 30px 0 0 0;
+		display: block;
+
+		li {
+			display: inline-block;
+			margin-left: 4px;
+		}
+	}
+
+	.home-fold__menu {
+		display: none;
 	}
 
 	.home-fold__logo {
-		padding-top: 100px;
-		margin-bottom:  60px;
+		padding-top: 30px;
 	}
 
 	.home-fold__content {
 		max-width: 660px;
+
+		.home-fold__btn {
+			display: inline-block;
+		}
 
 		a {
 			display: inline-block;
@@ -66,6 +116,10 @@
 
 	.home-fold__title {
 		font-size: 56px;
+
+		br {
+			display: none;
+		}
 	}
 
 	.home-fold__tag {
@@ -73,9 +127,19 @@
 	}
 }
 
+@media (min-width: $screen-md-min) {
+	.home-fold__logo svg {
+		width: 300px;
+	}
+
+	.home-fold__tag {
+		margin-bottom: 28px;
+	}
+}
+
 
 .home-proof {
-	padding: 80px 0;
+	padding: 80px 0 120px 0;
 }
 
 .home-proof__title {
@@ -131,7 +195,7 @@
 
 
 	.home-proof__tag {
-		width: 600px;
+		width: 700px;
 		margin-bottom: 40px;
 	}
 
