--- a/app/index.ejs
+++ b/app/index.ejs
@@ -2,7 +2,8 @@
 <html ng-app="<%= htmlWebpackPlugin.options.appMountId ? htmlWebpackPlugin.options.appMountId : 'app' %>">
 <head>
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
     <base href="<%= htmlWebpackPlugin.options.baseHref ? htmlWebpackPlugin.options.baseHref : '/' %>">
     <link href='//fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900' rel='stylesheet' type='text/css'>
 </head>
