--- a/app/sass/pages/_home.scss
+++ b/app/sass/pages/_home.scss
@@ -1,192 +1,192 @@
 .home-fold {
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: right center;
-	padding-bottom: 20px;
-	position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-bottom: 20px;
+  position: relative;
 
-	&::after {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: rgba($color-grey-900, .7);
-		z-index: 0;
-	}
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color-grey-900, .7);
+    z-index: 0;
+  }
 }
 
 .home-fold__menu {
-	float: right;
-	margin-top: 20px;
-	position: relative;
-	z-index: 2;
+  float: right;
+  margin-top: 20px;
+  position: relative;
+  z-index: 2;
 
-	svg {
-		fill: #fff;
-		height: 20px;
-		width: 20px;
-	}
+  svg {
+    fill: #fff;
+    height: 20px;
+    width: 20px;
+  }
 }
 
 .nav {
-	display: none;
+  display: none;
 }
 
 .home-fold__logo {
-	position: relative;
-	float: left;
-	padding: 20px 0 10px 0;
-	z-index: 1;
+  position: relative;
+  float: left;
+  padding: 20px 0 10px 0;
+  z-index: 1;
 
-	svg {
-		width: 180px;
-		fill: $color-grey-900;
-	}
+  svg {
+    width: 180px;
+    fill: $color-grey-900;
+  }
 }
 
 .home-fold__content {
-	@include clearfix;
-	color: #fff;
-	margin-bottom: 20px;
-	position: relative;
-	z-index: 1;
+  @include clearfix;
+  color: #fff;
+  margin-bottom: 20px;
+  position: relative;
+  z-index: 1;
 
-	a {
-		margin-bottom: 14px;
-	}
+  a {
+    margin-bottom: 14px;
+  }
 }
 
 .home-fold__title {
-	font-size: 20px;
-	font-weight: 700;
-	margin-bottom: 10px;
-	font-style: italic;
-	text-shadow: 0 2px 2px rgba(#000, .4);
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  font-style: italic;
+  text-shadow: 0 2px 2px rgba(#000, .4);
 
 }
 
 .home-fold__tag {
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.2em;
-	text-shadow: 0 2px 2px rgba(#000, .4);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.2em;
+  text-shadow: 0 2px 2px rgba(#000, .4);
 }
 
 @media (min-width: $screen-sm-min) {
-	.home-fold {
-		padding-bottom: 40px;
-	}
+  .home-fold {
+    padding-bottom: 40px;
+  }
 
-	.nav {
-		float: right;
-		list-style: none;
-		position: relative;
-		z-index: 1;
-		padding: 30px 0 0 0;
-		display: block;
+  .nav {
+    float: right;
+    list-style: none;
+    position: relative;
+    z-index: 1;
+    padding: 30px 0 0 0;
+    display: block;
 
-		li {
-			display: inline-block;
-			margin-left: 4px;
-		}
-	}
+    li {
+      display: inline-block;
+      margin-left: 4px;
+    }
+  }
 
-	.home-fold__menu {
-		display: none;
-	}
+  .home-fold__menu {
+    display: none;
+  }
 
-	.home-fold__logo {
-		padding-top: 30px;
-	}
+  .home-fold__logo {
+    padding-top: 30px;
+  }
 
-	.home-fold__content {
-		max-width: 660px;
+  .home-fold__content {
+    max-width: 660px;
 
-		.home-fold__btn {
-			display: inline-block;
-		}
+    .home-fold__btn {
+      display: inline-block;
+    }
 
-		a {
-			display: inline-block;
-			margin-right: 20px;
-		}
-	}
+    a {
+      display: inline-block;
+      margin-right: 20px;
+    }
+  }
 
-	.home-fold__title {
+  .home-fold__title {
 
-		br {
-			display: none;
-		}
-	}
+    br {
+      display: none;
+    }
+  }
 
-	.home-fold__tag {
-		font-size: 22px;
-	}
+  .home-fold__tag {
+    font-size: 22px;
+  }
 }
 
 @media (min-width: $screen-md-min) {
-	.home-fold__logo svg {
-		width: 300px;
-	}
+  .home-fold__logo svg {
+    width: 300px;
+  }
 
-	.home-fold__title {
-		font-size: 33px;
-	}
+  .home-fold__title {
+    font-size: 33px;
+  }
 }
 
 
 .home-proof {
-	padding: 40px 0;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: right center;
+  padding: 40px 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right center;
 }
 
 .home-proof__title {
-	font-size: 32px;
-	font-weight: 900;
-	margin-bottom: 4px;
+  font-size: 32px;
+  font-weight: 900;
+  margin-bottom: 4px;
 }
 
 .home-proof__tag {
-	font-size: 16px;
-	font-weight: 500;
-	line-height: 1.3em;
-	margin-bottom: 20px;
-	color: rgba($color-grey-900, .8);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3em;
+  margin-bottom: 20px;
+  color: rgba($color-grey-900, .8);
 }
 
 .home-proof__list {
-	margin: 0 auto;
-	padding: 0;
-	list-style: none;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
 
-	li {
-		font-size: 20px;
-		font-weight: 700;
-		padding: 2px;
+  li {
+    font-size: 20px;
+    font-weight: 700;
+    padding: 2px;
 
-		svg {
-			width: 50px;
-			height: 50px;
-			display: inline-block;
-			vertical-align: middle;
-			margin-right: 4px;
-		}
+    svg {
+      width: 50px;
+      height: 50px;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 4px;
+    }
 
-		span {
-			display: inline-block;
-			vertical-align: middle;
-		}
+    span {
+      display: inline-block;
+      vertical-align: middle;
+    }
 
-		span.sub {
-			color: rgba($color-grey-900, .8);
-			font-style: italic;
-			font-weight: 400;
-		}
-	}
+    span.sub {
+      color: rgba($color-grey-900, .8);
+      font-style: italic;
+      font-weight: 400;
+    }
+  }
 }
 
 
@@ -214,141 +214,141 @@
 
 @media (min-width: $screen-sm-min) {
 
-	.home-proof {
-		padding: 100px 0;
-	}
+  .home-proof {
+    padding: 100px 0;
+  }
 
-	.home-proof__title {
-		font-size: 40px;
-	}
+  .home-proof__title {
+    font-size: 40px;
+  }
 
-	.home-proof__tag {
-		width: 700px;
-		font-size: 20px;
-	}
+  .home-proof__tag {
+    width: 700px;
+    font-size: 20px;
+  }
 
-	.home-proof__content-mobile {
-		display: none;
-	}
+  .home-proof__content-mobile {
+    display: none;
+  }
 
-	.home-proof__list {
-		float: left;
-	}
+  .home-proof__list {
+    float: left;
+  }
 
-	//.home-proof__gallery {
-	//	display: block;
-	//}
+  //.home-proof__gallery {
+  //	display: block;
+  //}
 
 }
 
 
 .home-team {
-	padding: 40px 0;
+  padding: 40px 0;
 }
 
 .home-team__title {
-	font-size: 32px;
-	font-weight: 900;
-	margin-bottom: 4px;
+  font-size: 32px;
+  font-weight: 900;
+  margin-bottom: 4px;
 }
 
 .home-team__tag {
-	font-size: 16px;
-	font-weight: 500;
-	line-height: 1.3em;
-	margin-bottom: 30px;
-	color: rgba($color-grey-900, .8);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3em;
+  margin-bottom: 30px;
+  color: rgba($color-grey-900, .8);
 }
 
 .home-team__person {
-	padding: 0;
-	margin: 0;
-	list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .home-team__person-image {
-	width: 100px;
-	height: 100px;
-	margin: 0 auto 10px auto;
-	border-radius: 100px;
-	overflow: hidden;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto 10px auto;
+  border-radius: 100px;
+  overflow: hidden;
 
-	img {
-		width: 100%;
-	}
+  img {
+    width: 100%;
+  }
 }
 
 .home-team__person-content {
-	min-height: 60px;
-	margin-bottom: 40px;
-	text-align: center;
+  min-height: 60px;
+  margin-bottom: 40px;
+  text-align: center;
 }
 
 .home-team__person-name {
-	font-size: 20px;
-	font-weight: 700;
-	margin-bottom: 4px;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 4px;
 
-	span {
-		display: block;
-		font-size: 14px;
-		font-weight: 700;
-		color: $color-grey-500;
-	}
+  span {
+    display: block;
+    font-size: 14px;
+    font-weight: 700;
+    color: $color-grey-500;
+  }
 }
 
 .home-team__person-bio {
-	line-height: 1.4em;
-	margin-top: 2px;
+  line-height: 1.4em;
+  margin-top: 2px;
 }
 
 
 
 @media (min-width: $screen-sm-min) {
 
-	.home-team {
-		padding: 100px 0;
-	}
+  .home-team {
+    padding: 100px 0;
+  }
 
-	.home-team__title {
-		font-size: 40px;
-	}
+  .home-team__title {
+    font-size: 40px;
+  }
 
-	.home-team__tag {
-		width: 700px;
-		font-size: 20px;
-		margin-bottom: 40px;
-	}
+  .home-team__tag {
+    width: 700px;
+    font-size: 20px;
+    margin-bottom: 40px;
+  }
 
-	.home-team__person {
-		margin-bottom: 20px;
-	}
+  .home-team__person {
+    margin-bottom: 20px;
+  }
 
-	.home-team__person-content {
-		margin-left: 120px;
-		min-height: 100px;
-		text-align: left;
-	}
+  .home-team__person-content {
+    margin-left: 120px;
+    min-height: 100px;
+    text-align: left;
+  }
 
-	.home-team__person-image {
-		float: left;
-	}
+  .home-team__person-image {
+    float: left;
+  }
 
-	.home-team__person-name {
-		font-size: 24px;
-		margin-bottom: 4px;
+  .home-team__person-name {
+    font-size: 24px;
+    margin-bottom: 4px;
 
-		span {
-			display: inline-block;
-			font-size: 16px;
-			font-weight: 700;
-			color: $color-grey-500;
-		}
-	}
+    span {
+      display: inline-block;
+      font-size: 16px;
+      font-weight: 700;
+      color: $color-grey-500;
+    }
+  }
 
-	.home-team__person-bio {
-		font-size: 15px;
-	}
+  .home-team__person-bio {
+    font-size: 15px;
+  }
 
 
 }
@@ -357,118 +357,134 @@
 
 
 .home-contact {
-	padding: 40px 0;
-	background-color: $color-grey-900;
-	color: #fff;
+  padding: 40px 0;
+  background-color: $color-grey-900;
+  color: #fff;
 }
 
 .home-contact__title {
-	font-size: 32px;
-	font-weight: 900;
-	margin-bottom: 4px;
+  font-size: 32px;
+  font-weight: 900;
+  margin-bottom: 4px;
 }
 
 .home-contact__address {
-	font-size: 20px;
-	line-height: 1.4em;
-	margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 1.4em;
+  margin-bottom: 10px;
 }
 
 .home-contact__office {
-	border-radius: 6px;
-	overflow: hidden;
+  border-radius: 6px;
+  overflow: hidden;
 
-	img {
-		width: 100%;
-	}
+  img {
+    width: 100%;
+  }
 }
 
 .home-contact__phone {
-	font-size: 18px;
-	font-weight: 700;
-	margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .home-contact__email {
-	display: block;
-	margin-top: 8px;
-	font-size: 16px;
-	color: $color-success-500;
-	margin-bottom: 30px;
+  display: block;
+  margin-top: 8px;
+  font-size: 16px;
+  color: $color-success-500;
+  margin-bottom: 30px;
 }
 
 @media (min-width: $screen-sm-min) {
 
-	.home-contact {
-		padding: 100px 0;
-	}
+  .home-contact {
+    padding: 100px 0;
+  }
 
-	.home-contact__title {
-		font-size: 40px;
-	}
+  .home-contact__title {
+    font-size: 40px;
+  }
 
 }
 
 @media (min-width: $screen-md-min) {
-	.home-contact__address {
-		font-size: 28px;
-		margin-bottom: 18px;
-	}
+  .home-contact__address {
+    font-size: 28px;
+    margin-bottom: 18px;
+  }
 
-	.home-contact__phone {
-		font-size: 20px;
-		margin: 10px 0;
-	}
+  .home-contact__phone {
+    font-size: 20px;
+    margin: 10px 0;
+  }
 
-	.home-contact__email {
-		font-size: 20px;
-		margin-top: 16px;
-	}
+  .home-contact__email {
+    font-size: 20px;
+    margin-top: 16px;
+  }
 }
 
 
 .references {
-	padding: 40px 0;
-	background-color: $color-grey-50;
+  padding: 40px 0;
+  background-color: $color-grey-50;
 }
 
 .references__title {
-	font-size: 32px;
-	font-weight: 900;
-	margin-bottom: 4px;
+  font-size: 32px;
+  font-weight: 900;
+  margin-bottom: 4px;
 }
 
 .references-box {
-	margin: 20px 0 10px 0;
+  margin: 20px 0 10px 0;
 
 }
 
 .references-box__content {
-	margin-bottom: 8px;
-	font-size: 14px;
-	font-style: italic;
+  margin-bottom: 8px;
+  font-size: 14px;
+  font-style: italic;
 }
 
 .references-box__name {
-	background-color: $color-primary-500;
-	padding: 6px;
-	border-radius: 3px;
-	display: inline-block;
-	font-weight: 700;
-	font-size: 16px;
+  background-color: $color-primary-500;
+  padding: 6px;
+  border-radius: 3px;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 16px;
 }
 
-@media (min-width: $screen-sm-min) {
-	.references {
-		padding: 100px 0;
-	}
+.cert {
+  position: relative;
+  z-index: 100;
+  color: #fff;
+  padding: 20px 0 10px 0;
 }
 
-@media (min-width: $screen-md-min) {
-	.references-box__content {
-		font-size: 16px;
-	}
-	.references-box__name {
-		font-size: 18px;
-	}
+.cert-message {
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  border: solid 1px #fff;
+  padding: 14px;
+  border-radius: $border-radius-base;
+  width: 286px;
+
+  span {
+    display: inline-block;
+    vertical-align: middle;
+    width: 200px;
+  }
+
+  svg {
+    fill: #fff;
+    width: 40px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+  }
 }
